fix card text-wrap on things to do

--- a/css/style.css
+++ b/css/style.css
@@ -159,8 +159,7 @@ h4
 {
     height: 100px;
     overflow: hidden;
-    text-overflow : ellipsis;
-    white-space: nowrap;    
+    text-overflow : ellipsis;   
 }
 
 #cd-things-todo .card-title
